--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
+    "@babel/runtime-corejs2": "^7.5.5",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "react": "^15.0.0 || ^16.0.0",
@@ -9,13 +11,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "node-sass": "^4.11.0",
-    "parcel-bundler": "^1.11.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "parcel-bundler": "^1.12.3",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
     "polished": "^3.4.1",
     "styled-components": "^4.4.0",
     "styled-normalize": "^8.0.6",
@@ -27,5 +28,9 @@
     "start": "parcel index.html",
     "build": "parcel build index.html --out-dir dist && yarn deletemaps",
     "deletemaps": "find . -type f -name *.map -delete"
+  },
+  "targets": {
+    "chrome": "58",
+    "ie": "11"
   }
 }
