--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "lodash": "^4.17.11",
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^16.3.0",
+    "react-markdown": "^4.2.2",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "request-promise": "^4.2.4",
+    "unfetch": "^4.1.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
@@ -15,6 +19,7 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "marked": "^0.7.0",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "polished": "^3.4.1",
