--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@babel/runtime": "^7.5.5",
     "@babel/runtime-corejs2": "^7.6.2",
     "axios": "^0.18.0",
+    "json2csv": "^4.5.3",
     "lodash": "^4.17.11",
+    "objects-to-csv": "^1.3.4",
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^16.3.0",
     "react-markdown": "^4.2.2",
