--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "@babel/runtime": "^7.5.5",
     "@babel/runtime-corejs2": "^7.6.2",
     "axios": "^0.18.0",
+    "brace": "^0.11.1",
     "json2csv": "^4.5.3",
     "lodash": "^4.17.11",
     "objects-to-csv": "^1.3.4",
     "react": "^15.0.0 || ^16.0.0",
+    "react-ace": "^7.0.4",
     "react-dom": "^16.3.0",
     "react-markdown": "^4.2.2",
     "react-router": "^5.0.0",
