--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "brace": "^0.11.1",
     "json2csv": "^4.5.3",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "objects-to-csv": "^1.3.4",
     "react": "^15.0.0 || ^16.0.0",
     "react-ace": "^7.0.4",
