--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-markdown": "^4.2.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-stockcharts": "^0.7.8",
     "request-promise": "^4.2.4",
     "unfetch": "^4.1.0",
     "whatwg-fetch": "^3.0.0"
