--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "objects-to-csv": "^1.3.4",
     "react": "^15.0.0 || ^16.0.0",
     "react-ace": "^7.0.4",
-    "react-dom": "^16.3.0",
+    "react-dom": "^15.0.0 || ^16.0.0",
     "react-markdown": "^4.2.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-stockcharts": "^0.7.8",
+    "recharts": "^1.8.5",
     "request-promise": "^4.2.4",
     "unfetch": "^4.1.0",
+    "victory": "^33.1.6",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
