--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "objects-to-csv": "^1.3.4",
-    "react": "^15.0.0 || ^16.0.0",
+    "react": ">=16.0.0",
     "react-ace": "^7.0.4",
-    "react-dom": "^15.0.0 || ^16.0.0",
+    "react-dom": ">=16.0.0",
     "react-markdown": "^4.2.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-stockcharts": "^0.7.8",
+    "react-visibility-sensor": "^5.1.1",
     "recharts": "^1.8.5",
     "request-promise": "^4.2.4",
     "unfetch": "^4.1.0",
