--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-ace": "^7.0.4",
     "react-dom": ">=16.0.0",
     "react-markdown": "^4.2.2",
+    "react-pose": "^4.0.10",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-stockcharts": "^0.7.8",
