--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@babel/runtime-corejs2": "^7.6.2",
     "axios": "^0.18.0",
     "brace": "^0.11.1",
+    "clipboard-copy": "^3.1.0",
     "json2csv": "^4.5.3",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
