--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "objects-to-csv": "^1.3.4",
     "react": ">=16.0.0",
     "react-ace": "^7.0.4",
+    "react-countup": "^4.2.6",
     "react-dom": ">=16.0.0",
     "react-markdown": "^4.2.2",
     "react-pose": "^4.0.10",
