--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "axios": "^0.18.0",
     "brace": "^0.11.1",
     "clipboard-copy": "^3.1.0",
+    "hljs": "^6.2.3",
     "json2csv": "^4.5.3",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
@@ -13,6 +14,7 @@
     "react-ace": "^7.0.4",
     "react-countup": "^4.2.6",
     "react-dom": ">=16.0.0",
+    "react-highlight.js": "^1.0.7",
     "react-markdown": "^4.2.2",
     "react-pose": "^4.0.10",
     "react-router": "^5.0.0",
