--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "react-router-dom": "^5.0.0",
     "react-stockcharts": "^0.7.8",
     "react-visibility-sensor": "^5.1.1",
+    "react-wiring": "https://github.com/daywiss/react-wiring.git#3.0.1",
     "recharts": "^1.8.5",
     "request-promise": "^4.2.4",
     "unfetch": "^4.1.0",
     "victory": "^33.1.6",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "ws-api-client": "https://github.com/daywiss/ws-api-client.git#2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
