--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "axios": "^0.18.0",
     "brace": "^0.11.1",
     "clipboard-copy": "^3.1.0",
+    "git": "^0.1.5",
     "hljs": "^6.2.3",
     "json2csv": "^4.5.3",
+    "lightweight-charts": "^1.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "objects-to-csv": "^1.3.4",
+    "re-resizable": "^6.2.0",
     "react": ">=16.0.0",
     "react-ace": "^7.0.4",
     "react-countup": "^4.2.6",
@@ -17,6 +20,7 @@
     "react-highlight.js": "^1.0.7",
     "react-markdown": "^4.2.2",
     "react-pose": "^4.0.10",
+    "react-resize-detector": "^4.2.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-stockcharts": "^0.7.8",
@@ -27,7 +31,7 @@
     "unfetch": "^4.1.0",
     "victory": "^33.1.6",
     "whatwg-fetch": "^3.0.0",
-    "ws-api-client": "https://github.com/daywiss/ws-api-client.git#2.0"
+    "ws-api-client": "https://github.com/daywiss/ws-api-client#2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
