--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@babel/runtime-corejs2": "^7.6.2",
+    "ace-builds": "^1.4.8",
     "axios": "^0.18.0",
     "brace": "^0.11.1",
     "clipboard-copy": "^3.1.0",
@@ -14,7 +15,7 @@
     "objects-to-csv": "^1.3.4",
     "re-resizable": "^6.2.0",
     "react": ">=16.0.0",
-    "react-ace": "^7.0.4",
+    "react-ace": "^8.1.0",
     "react-countup": "^4.2.6",
     "react-dom": ">=16.0.0",
     "react-highlight.js": "^1.0.7",
