--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": ">=16.0.0",
     "react-ace": "^8.1.0",
     "react-countup": "^4.2.6",
+    "react-d3": "^0.4.0",
     "react-dom": ">=16.0.0",
     "react-highlight.js": "^1.0.7",
     "react-markdown": "^4.2.2",
@@ -25,6 +26,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-stockcharts": "^0.7.8",
+    "react-vis": "^1.11.7",
     "react-visibility-sensor": "^5.1.1",
     "react-wiring": "https://github.com/daywiss/react-wiring.git#3.0.1",
     "recharts": "^1.8.5",
