--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       uses: abinmn/gcp-storage-bucket-action@v1.0
       with:
         # GCP service key encoded as base64. The account associated with the key should have permissions to make changes in storage bucket.
-        service_key: $GCP_KEY
+        service_key: ${{ secrets.GCP_KEY }}
         # The folder you want to deploy. Default is the repository. You can change this value if you have a build step and point this to that build folder.
         build_folder: './dist/**'
         # Bucket name
