--- a/.github/workflows/beta.yaml
+++ b/.github/workflows/beta.yaml
@@ -29,7 +29,7 @@ jobs:
         # Artifact name
         name: dist
         # Directory containing files to upload
-        path: ./dist/**
+        path: $GITHUB_WORKSPACE/dist/**
   deploy:
     runs-on: ubuntu-latest
     steps:
