--- a/.github/workflows/beta.yaml
+++ b/.github/workflows/beta.yaml
@@ -16,29 +16,28 @@ jobs:
     steps:
     - name: clone repo
       uses: actions/checkout@v2
-    - run: cd $GITHUB_WORKSPACE
     - name: Build dist
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       shell: bash
       run: |
+        cd $GITHUB_WORKSPACE
         yarn
         yarn build
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
         # Artifact name
-        name: dist
+        name: dist-$GITHUB_REF-$GITHUB_SHA
         # Directory containing files to upload
         path: ./dist
   deploy:
-    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Download artifact
       uses: actions/download-artifact@v1.0.0
       with:
         # Artifact name
-        name: dist
+        name: dist-$GITHUB_REF-$GITHUB_SHA
         # Destination path
         path: ./dist
     - name: Deploy to CDN
@@ -47,7 +46,7 @@ jobs:
         # GCP service key encoded as base64. The account associated with the key should have permissions to make changes in storage bucket.
         service_key: ${{ secrets.GCP_KEY }}
         # The folder you want to deploy. Default is the repository. You can change this value if you have a build step and point this to that build folder.
-        build_folder: ./dist/**
+        build_folder: './dist/**'
         # Bucket name
         bucket_name: 'beta.fundingrate.io'
         # Name of the project that contains the storage bucket.
