--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,6 +32,7 @@ jobs:
         path: ./dist
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - name: Download artifact
       uses: actions/download-artifact@v1.0.0
