--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "brace": "^0.11.1",
     "clipboard-copy": "^3.1.0",
+    "framer-motion": "^1.10.3",
     "git": "^0.1.5",
     "hljs": "^6.2.3",
     "json2csv": "^4.5.3",
@@ -14,11 +15,11 @@
     "moment": "^2.24.0",
     "objects-to-csv": "^1.3.4",
     "re-resizable": "^6.2.0",
-    "react": ">=16.0.0",
+    "react": "^16.8",
     "react-ace": "^8.1.0",
     "react-countup": "^4.2.6",
     "react-d3": "^0.4.0",
-    "react-dom": ">=16.0.0",
+    "react-dom": "^16.8",
     "react-highlight.js": "^1.0.7",
     "react-markdown": "^4.2.2",
     "react-pose": "^4.0.10",
